# sodex-api-py

./: .env.example  .gitignore  README.md  README_FUTURES.md  install-dev.sh  pyproject.toml
examples/: advanced_batch.py  get_balance.py  get_server_time.py  get_symbol_info.py  get_symbol_list.py  place_order.py  simple_batch.py  subscribe_symbol.py  subscribe_symbol_kline.py
examples/futures/: get_futures_balance.py  get_futures_orderbook.py  get_futures_ticker.py  manage_futures_orders.py  place_futures_order.py
src/sodex_api/: __init__.py  client.py  config.py  exceptions.py  models.py  ws_client.py
src/sodex_api/core/: __init__.py  auth.py  base.py  exceptions.py
src/sodex_api/futures/: __init__.py  client.py  models.py
src/sodex_api/spot/: __init__.py  client.py  models.py  ws_client.py
