[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sodex-api"
version = "1.0.0"
description = "Python client for Sodex Exchange API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SosoValue Tech", email = "tech@sosovalue.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "websockets>=11.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/sosovalue-tech/sodex-api"
Repository = "https://github.com/sosovalue-tech/sodex-api"
Documentation = "https://github.com/sosovalue-tech/sodex-api"
Issues = "https://github.com/sosovalue-tech/sodex-api/issues"



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

 